updated resume, removed scrollbar, bug fix in navBar

--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,8 @@
         font-family: 'Raleway', sans-serif;
     }
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+::-webkit-scrollbar {
+    display: none;
+  }
